<resources>
    <string name="app_name">App caulcular imc</string>
    <string name="titulo_toolbar">Cálculo IMC</string>
    <string name="menssage_apresetation">Insira seus dados para o calculo:</string>
    <string name="peso">Digite seu peso :</string>
    <string name="altura">Digite sua altura</string>
    <string name="calcular">CALCULAR</string>
    <string name="data_invalids">Os dados inseridos são inválidos</string>
    <string name="mensagem_peso1">Peso abaixo do normal</string>
    <string name="mensagem_peso2">Pré obesidade</string>
    <string name="mensagem_peso3">Obesidade</string>
</resources>